--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.65.0",
   "private": true,
   "engines": {
-    "node": ">=20.15",
+    "node": ">=21.x",
     "pnpm": ">=9.5"
   },
   "packageManager": "pnpm@9.6.0",
